k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      labels:
        app: wishlist
    spec:
      containers:
        - name: wishlist
          image: wishlist-backend:latest
          imagePullPolicy: Never  # Para usar imagem local em minikube
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
